@@ -11,25 +11,9 @@
 	<extension point="xbmc.python.module" library="resources/lib/" />
 	<extension point="xbmc.addon.metadata">
         <news>
-[upd] Greek strings [Twilight0]
-[upd] Polish strings [Etharr]
-[upd] Finnish strings [teemue]
-[upd] Spanish strings [roliverosc]
-[fix/upd] resolve "Error Contents: 'q'" error [horstepipe]
-[fix/upd] resolve Play All/Play from here not starting playback
-[fix/upd] resolve playlists starting on second item
-[fix/upd] allow dash in quality choices
-[fix/upd] set content to files for menus, resolves mouse/scrolling
-[fix/upd] fix cipher
-[fix/upd] increase search history limit to 200
-[fix/upd] storage db
-[add] Safe Search to Settings -> General
-[add] Thumbnail size to Settings -> General
-[add] Auto-play suggested [mehdilauters]
-[add] Automatic subtitles [Uukrull]
-[add] My Subscriptions (Filtered) - whitelist/blacklist version of My Subscriptions [chhe]
-[add] module extension point:
-    add-ons can now add plugin.video.youtube dependency and resolve youtube video id's or make v3 api requests using the youtube plugin
+[fix/upd] dash working for vevo/etc
+[upd] rework of auto subtitles
+[fix] add undefined settings to xml for leia nightly login issues
         </news>
         <assets>
             <icon>icon.png</icon>
